# yes-links

./: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  alembic.ini  check_classes.py  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  yes_links.db
.github/workflows/: ci.yml  deploy-prod.yml
alembic/: env.py  script.py.mako
alembic/versions/: 202603080001_init.py  (+1 more)
docs/: README.md  agent-context.json  agent-context.md  api.md  architecture.md  decisions.md  deployment.md  env-template.md  frontend-wrapper-plan.md  guia-integracion-puy.md  infrastructure.md  openapi.yaml  operations.md  prd.md  sdk-integration-guide.md  services.md  sprints.md  testing.md  yes-links-postman-collection.json
scripts/: bootstrap.sh  k6-redirect.js  locustfile.py  migrate.sh  perf-redirect.sh
src/: __init__.py  main.py
src/api/: routes_links.py  (+3 more)
test_reports/: T1.10-T1.11_REVALIDATE_20260504-2120.md  T1.14_REVALIDATE_20260505-1040.md  T1.1_REVALIDATE_20260505-0100.md  T1.2_REVALIDATE_20260505-0110.md  T1.3_REVALIDATE_20260505-0120.md  T1.4-T1.9_REVALIDATE_20260505-2050.md  T_demo_REVALIDATE_20260505-0936.md
tests/: conftest.py
yes-links-demo/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
yes-links-ui/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  playwright.diag.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
yes_links.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+182 files in other folders)
